History: Fix alignment issue with 'x' buttons on Android.
Sergiu's fix for crbug.com/224081 inadvertently broke the layout
on Android. This fixes the problem.

BUG=None
TEST=Open chrome://history and ensure that the 'x' buttons on the
right hand side of each entry are all aligned.
NOTRY=true


Review URL: https://chromiumcodereview.appspot.com/13724008

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@192619 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: fc142ae086f902f1647049ce45115b5a08e80242

--- a/chrome/browser/resources/history/history_mobile.css
+++ b/chrome/browser/resources/history/history_mobile.css
@@ -124,6 +124,7 @@ h3,
 #search-field {
   border-bottom: 1px solid rgb(220, 220, 220);
   border-top: 1px solid rgb(220, 220, 220);
+  display: block;
   margin-bottom: -1px;
   overflow: hidden;
 }
